--- a/.github/workflows/run_matlab_tests.yml
+++ b/.github/workflows/run_matlab_tests.yml
@@ -1,18 +1,23 @@
-name: Generate Test Artifacts on GitHub-Hosted Runner
+name: Run HyEQ MATLAB Tests
 on: [push]
 jobs:
   my-job:
-    name: Run MATLAB Tests and Generate Artifacts
+    name: Run HyEQ MATLAB Tests
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v1
-      - name: Run tests and generate artifacts
-        uses: matlab-actions/run-tests@v1
+      - name: Run script
+        uses: matlab-actions/run-command@v1
         with:
-          source-folder: matlab; simulink; Examples
-          select-by-folder: matlab/+hybrid/+tests
-          test-results-junit: test-results/results.xml
-          code-coverage-cobertura: code-coverage/coverage.xml
+          command: hybrid.tests.run
+        
+#       - name: Run tests and generate artifacts
+#         uses: matlab-actions/run-tests@v1
+#         with:
+#           source-folder: matlab; simulink; Examples
+#           select-by-folder: matlab/+hybrid/+tests
+#           test-results-junit: test-results/results.xml
+#           code-coverage-cobertura: code-coverage/coverage.xml
