--- a/.github/workflows/run_matlab_tests.yml
+++ b/.github/workflows/run_matlab_tests.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Run script
         uses: matlab-actions/run-command@v1
         with:
-          command: hybrid.tests.run
+          command: addpath("matlab"); hybrid.tests.run
         
 #       - name: Run tests and generate artifacts
 #         uses: matlab-actions/run-tests@v1
